tests/integration/seed/predictions/invalid/ner+classif2.jsonlines
{"uuid": "1831440", "annotations": {"Sentiment": {"labels":[{"value": "pos", "proba": 0.999}] } ,"FOO": {"entities": [{"value": "name", "start": 23, "end": 33 }] } } }
